# HERoam

./: Makefile  meson.build
data/: fit_potential.txt
src/: a.out  config.h  main.c  simulation.c  simulation.h  vectors.c  vectors.h
